auto-test/tests/chapter_16/invalid_types/string_literal_is_plain_char_pointer.c
/* String literals decay to char * arrays,
 * and can't initialize pointers to other types. */
int main(void) {
    
    signed char *ptr = "foo";
    return 0;
}